<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_comics"
        android:enabled="true"
        android:icon="@drawable/ic_comics"
        android:title="@string/bottom_navigation_menu_comics" />
    <item
        android:id="@+id/action_character"
        android:enabled="true"
        android:icon="@drawable/ic_character"
        android:title="@string/bottom_navigation_menu_character" />
    <item
        android:id="@+id/action_fav"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/bottom_navigation_menu_fav" />
    <item
        android:id="@+id/action_qrcode"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/bottom_navigation_menu_qrcode" />
</menu>